--- a/MyWalletSaver/Base.lproj/Main.storyboard
+++ b/MyWalletSaver/Base.lproj/Main.storyboard
@@ -421,7 +421,7 @@
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mz4-2r-SSC">
-                                        <rect key="frame" x="265" y="11" width="68" height="24"/>
+                                        <rect key="frame" x="265.5" y="11" width="67.5" height="24"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="20"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
@@ -437,8 +437,9 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" red="0.16865840000000001" green="0.27500943700000002" blue="0.3028922033" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.97647058819999999" green="0.23921568630000001" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstAttribute="centerX" secondItem="Mz4-2r-SSC" secondAttribute="centerX" constant="1" id="01a-lU-xSy"/>
                                     <constraint firstItem="Mz4-2r-SSC" firstAttribute="top" secondItem="dKI-gL-5Oe" secondAttribute="top" constant="11" id="311-Hr-GUD"/>
                                     <constraint firstItem="vzX-fC-85L" firstAttribute="leading" secondItem="Mz4-2r-SSC" secondAttribute="trailing" constant="216" id="6GY-of-GJ5"/>
                                     <constraint firstItem="Mz4-2r-SSC" firstAttribute="centerX" secondItem="dKI-gL-5Oe" secondAttribute="centerX" constant="-1" id="H4K-w7-Rs3"/>
@@ -446,17 +447,23 @@
                                     <constraint firstAttribute="trailing" secondItem="vzX-fC-85L" secondAttribute="trailing" constant="8" id="Lxq-kD-iPM"/>
                                     <constraint firstItem="vzX-fC-85L" firstAttribute="centerY" secondItem="Mz4-2r-SSC" secondAttribute="centerY" id="PFh-c6-w7w"/>
                                     <constraint firstAttribute="height" constant="44" id="ZKu-Hk-9ZP"/>
+                                    <constraint firstAttribute="centerY" secondItem="Mz4-2r-SSC" secondAttribute="centerY" constant="-1" id="cfU-39-Rg2"/>
                                     <constraint firstAttribute="bottom" secondItem="Mz4-2r-SSC" secondAttribute="bottom" constant="9" id="ckI-c9-tiP"/>
+                                    <constraint firstAttribute="height" constant="44" id="xYb-QM-HGD"/>
                                 </constraints>
                                 <variation key="default">
                                     <mask key="constraints">
+                                        <exclude reference="ZKu-Hk-9ZP"/>
+                                        <exclude reference="311-Hr-GUD"/>
+                                        <exclude reference="H4K-w7-Rs3"/>
                                         <exclude reference="Jjk-81-0mF"/>
+                                        <exclude reference="ckI-c9-tiP"/>
                                         <exclude reference="6GY-of-GJ5"/>
                                     </mask>
                                 </variation>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Currency: " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ofN-VZ-W4s">
-                                <rect key="frame" x="16" y="90" width="81" height="53"/>
+                                <rect key="frame" x="16" y="106" width="81" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="81" id="CDD-VI-dEf"/>
                                 </constraints>
@@ -464,18 +471,6 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jnH-xy-ckD">
-                                <rect key="frame" x="549" y="102" width="35" height="30"/>
-                                <color key="backgroundColor" red="0.16865840000000001" green="0.27500943700000002" blue="0.3028922033" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="RU9-PY-lE2"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="35" id="kL1-FD-swY"/>
-                                    <constraint firstAttribute="width" constant="35" id="ohj-aM-SxN"/>
-                                </constraints>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="GNv-0h-u1f">
                                 <rect key="frame" x="0.0" y="136" width="600" height="464"/>
                                 <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -492,22 +487,33 @@
                                 </prototypes>
                                 <sections/>
                             </tableView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jnH-xy-ckD">
+                                <rect key="frame" x="549" y="102" width="35" height="30"/>
+                                <color key="backgroundColor" red="0.16865840000000001" green="0.27500943700000002" blue="0.3028922033" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="RU9-PY-lE2"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="35" id="kL1-FD-swY"/>
+                                    <constraint firstAttribute="width" constant="35" id="ohj-aM-SxN"/>
+                                </constraints>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="0.16865840000000001" green="0.27500943700000002" blue="0.3028922033" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="GNv-0h-u1f" firstAttribute="trailing" secondItem="dKI-gL-5Oe" secondAttribute="trailing" id="B0Q-XV-9e6"/>
                             <constraint firstItem="ofN-VZ-W4s" firstAttribute="centerY" secondItem="jnH-xy-ckD" secondAttribute="centerY" constant="-0.5" id="HdP-I3-dwd"/>
-                            <constraint firstItem="ofN-VZ-W4s" firstAttribute="top" secondItem="dKI-gL-5Oe" secondAttribute="bottom" constant="26" id="KCc-oj-VZx"/>
                             <constraint firstItem="GNv-0h-u1f" firstAttribute="top" secondItem="jnH-xy-ckD" secondAttribute="bottom" constant="4" id="Lx9-Jg-fcb"/>
+                            <constraint firstItem="jnH-xy-ckD" firstAttribute="top" relation="lessThanOrEqual" secondItem="dKI-gL-5Oe" secondAttribute="bottom" constant="38" id="MBf-NA-4sO"/>
                             <constraint firstItem="jnH-xy-ckD" firstAttribute="trailing" secondItem="urn-cW-s6X" secondAttribute="trailingMargin" id="NHq-Bj-tp7"/>
                             <constraint firstItem="GNv-0h-u1f" firstAttribute="top" secondItem="ofN-VZ-W4s" secondAttribute="bottom" constant="-7" id="Nsf-oj-1bp"/>
                             <constraint firstItem="GNv-0h-u1f" firstAttribute="leading" secondItem="dKI-gL-5Oe" secondAttribute="leading" id="R5B-S8-C7n"/>
                             <constraint firstItem="GNv-0h-u1f" firstAttribute="bottom" secondItem="PZ5-B8-YJL" secondAttribute="top" id="VoS-rr-uRm"/>
                             <constraint firstItem="dKI-gL-5Oe" firstAttribute="top" secondItem="8Um-Z5-apy" secondAttribute="bottom" id="dRO-Jj-yL2"/>
-                            <constraint firstItem="PZ5-B8-YJL" firstAttribute="top" secondItem="ofN-VZ-W4s" secondAttribute="bottom" constant="457" id="dtX-fB-77D"/>
+                            <constraint firstItem="PZ5-B8-YJL" firstAttribute="top" secondItem="ofN-VZ-W4s" secondAttribute="bottom" constant="473" id="dtX-fB-77D"/>
                             <constraint firstItem="dKI-gL-5Oe" firstAttribute="leading" secondItem="urn-cW-s6X" secondAttribute="leading" id="iEx-dy-hf8"/>
-                            <constraint firstItem="GNv-0h-u1f" firstAttribute="top" secondItem="jnH-xy-ckD" secondAttribute="bottom" constant="4" id="ogI-Pu-hVC"/>
-                            <constraint firstItem="jnH-xy-ckD" firstAttribute="top" secondItem="dKI-gL-5Oe" secondAttribute="bottom" priority="250" constant="38" id="tLs-rD-lq2"/>
+                            <constraint firstItem="GNv-0h-u1f" firstAttribute="top" secondItem="jnH-xy-ckD" secondAttribute="bottom" priority="750" constant="4" id="ogI-Pu-hVC"/>
                             <constraint firstItem="ofN-VZ-W4s" firstAttribute="leading" secondItem="urn-cW-s6X" secondAttribute="leadingMargin" id="wyh-dR-xp1"/>
                             <constraint firstAttribute="trailing" secondItem="dKI-gL-5Oe" secondAttribute="trailing" id="xvW-Rp-EyF"/>
                         </constraints>
